# optimism-preimage-maker

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  rust-toolchain
.github/workflows/: ci.yaml
cache/nginx/: Dockerfile  nginx.conf
cache/nginx/templates/: cache-proxy-beacon.tmpl  cache-proxy-geth.tmpl  cache-proxy-op-geth.tmpl
host/: Cargo.toml
host/src/: config.rs  fetcher.rs  host.rs  main.rs  preimage.rs  server.rs  util.rs
kurtosis/: kurtosis.yaml  main.star  simple.yaml
kurtosis/devnet/: go.mod  go.sum
kurtosis/devnet/devnet-sdk/cmd/mf2kt/: main.go
kurtosis/devnet/devnet-sdk/constraints/: constraints.go  constraints_test.go
kurtosis/devnet/devnet-sdk/contracts/: contracts.go
kurtosis/devnet/devnet-sdk/contracts/constants/: constants.go
kurtosis/devnet/devnet-sdk/contracts/registry/client/: client.go  l2tol2crossdomainmessenger.go  weth.go
kurtosis/devnet/devnet-sdk/contracts/registry/empty/: empty.go
kurtosis/devnet/devnet-sdk/controller/kt/: kt.go  kt_test.go  mutate_env.go  mutate_env_test.go  test_helpers.go
kurtosis/devnet/devnet-sdk/descriptors/: deployment.go
kurtosis/devnet/devnet-sdk/interfaces/: registry.go
kurtosis/devnet/devnet-sdk/kt/: visitor.go  visitor_test.go
kurtosis/devnet/devnet-sdk/kt/fs/: devnet_fs.go  devnet_fs_test.go
kurtosis/devnet/devnet-sdk/proofs/prestate/cmd/: main.go
kurtosis/devnet/devnet-sdk/shell/cmd/ctrl/: main.go
kurtosis/devnet/devnet-sdk/shell/cmd/enter/: main.go
kurtosis/devnet/devnet-sdk/shell/cmd/motd/: main.go
kurtosis/devnet/devnet-sdk/shell/env/: chain.go  devnet.go  env_test.go  file_fetch.go  kt_fetch.go  kt_native_fetch.go  kt_native_fetch_test.go
kurtosis/devnet/devnet-sdk/system/: chain.go  chain_test.go  interfaces.go  node.go  system.go  system_test.go  txbuilder_test.go  txprocessor.go  wallet.go  wallet_test.go
kurtosis/devnet/kurtosis-devnet/: justfile  simple.yaml
kurtosis/devnet/kurtosis-devnet/cmd/: main.go  main_test.go
kurtosis/devnet/kurtosis-devnet/op-program-svc/: justfile
kurtosis/devnet/kurtosis-devnet/pkg/deploy/: deploy.go  deploy_test.go  fileserver.go  fileserver_test.go  prestate.go  prestate_test.go  template.go  template_test.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/: adapters.go  endpoints.go  endpoints_test.go  kurtosis.go  kurtosis_test.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/api/enclave/: enclave.go  enclave_test.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/api/fake/: fake.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/api/run/: handlers.go  handlers_test.go  kurtosis_run.go  kurtosis_run_test.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/api/wrappers/: wrappers.go  wrappers_local.go  wrappers_testing.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/deployer/: deployer.go  wallets.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/deployer/cmd/: main.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/depset/: depset.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/depset/cmd/: main.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/inspect/: conductor.go  inspect.go  inspect_test.go  service.go  service_test.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/inspect/cmd/: main.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/interfaces/: interfaces.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/jwt/: jwt.go
kurtosis/devnet/kurtosis-devnet/pkg/kurtosis/sources/jwt/cmd/: main.go
kurtosis/devnet/kurtosis-devnet/pkg/tmpl/cmd/: main.go
kurtosis/devnet/kurtosis-devnet/pkg/tmpl/fake/: fake.go
kurtosis/op-service/eth/: config.go
maker/: Cargo.toml
maker/src/: config.rs  main.rs  oracle.rs
maker/src/l2/: client.rs
scripts/: get_l1_config.sh  port.sh  sync_lock.py  template.sh  wait.sh
server/: Cargo.toml  Dockerfile
server/src/: collector.rs  l2_client.rs  lib.rs  main.rs  purger.rs  server.rs  web.rs
server/src/client/: beacon_client.rs  l1_client.rs  l2_client.rs  mod.rs  period.rs
server/src/data/: file_finalized_l1_repository.rs  file_light_client_update_repository.rs  file_preimage_repository.rs  finalized_l1_repository.rs  light_client_update_repository.rs  mod.rs  preimage_repository.rs
server/src/derivation/host/single/: config.rs  handler.rs  local_kv.rs  mod.rs  trace.rs
server/src/host/single/: cli.rs  config.rs  fetcher.rs  handler.rs  kona_client_copy.rs  local_kv.rs  mod.rs  oracle.rs  orchestrator.rs  provider.rs  runner.rs  store.rs  trace.rs
server/src/transport/: cache.rs  hash.rs  http_proxy.rs  lru.rs  metrics.rs  mod.rs  reqwest_transport.rs
server/src/web/: handler.rs
server/tests/: dup.rs  e2e.rs  inspect.rs  loop.rs  perf.rs
src/: checkpoint.rs  config.rs  fetcher.rs  l2_client.rs  lib.rs  main.rs  oracle.rs  server.rs
src/derivation/: mod.rs
src/derivation/client/: l2.rs
src/derivation/oracle/: mod.rs
src/derivation/oracle/lockfree/: client.rs  fetcher.rs  mod.rs  server.rs
src/derivation/oracle/multiprocess/: client.rs  mod.rs
src/derivation/oracle/unsafe/: client.rs  fetcher.rs
src/derivation/oracle/write_through/: client.rs  fetcher.rs  mod.rs  server.rs
src/handler/: derivation_handler.rs  mod.rs  oracle.rs  preimage.rs
src/host/single/: cli.rs  fetcher.rs  local_kv.rs  mod.rs  orchestrator.rs  trace.rs
src/l2/: client.rs  mod.rs  sync_status.rs
src/oracle/: mod.rs
src/oracle/lockfree/: client.rs  fetcher.rs  mod.rs  server.rs
src/oracle/multiprocess/: client.rs  mod.rs
src/oracle/unsafe/: client.rs  fetcher.rs
src/oracle/write_through/: client.rs  fetcher.rs  server.rs
src/polling/: mod.rs
src/service/: preimage.rs
src/webapp/: derivation_handler.rs  mod.rs  oracle.rs
tests/: preimage_test.rs
tool/: derive.sh  output.sh
tx/: hardhat.config.js  hardhat.config.template  package-lock.json  package.json
tx/contracts/: App.sol
tx/scripts/: deploy.js  exec.js
