[workspace]
resolver = "2"
members = [
    "server",
]

[workspace.dependencies]
anyhow = { version="1.0.98", default-features = false }
hashbrown = "0.15.1"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }

# Kona
#kona-mpt = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.2", default-features = false }
#kona-client = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.2", default-features = false }
#kona-host = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.2", default-features = false }
#kona-proof = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.2", default-features = false }
#kona-preimage = {git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.2", default-features = false }
#kona-providers-alloy= { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.2", default-features = false }
#kona-genesis = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.2", default-features = false }
#kona-protocol = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.2", default-features = false }

kona-mpt = { path="../../op-rs/kona", default-features = false, package = "kona-mpt" }
kona-client = { path="../../op-rs/kona/bin/client", default-features = false, package = "kona-client" }
kona-host = { path="../../op-rs/kona/bin/host", default-features = false, package = "kona-host" }
kona-proof = { path="../../op-rs/kona/crates/proof/proof", default-features = false, package = "kona-proof" }
kona-preimage = { path="../../op-rs/kona/crates/proof/preimage", default-features = false, package = "kona-preimage" }
kona-providers-alloy= { path="../../op-rs/kona", default-features = false, package = "kona-providers-alloy" }
kona-genesis = { path="../../op-rs/kona/crates/protocol/genesis", default-features = false, package = "kona-genesis" }
kona-protocol = { path="../../op-rs/kona", default-features = false, package = "kona-protocol" }

# Alloy
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-eips = { version = "1.0.35", default-features = false }
alloy-provider = { version = "1.0.35", default-features = false }
alloy-consensus = { version = "1.0.35", default-features = false }
alloy-transport = { version = "1.0.35", default-features = false }
alloy-rpc-types = { version = "1.0.35", default-features = false  }
alloy-rpc-client = { version = "1.0.35", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false }
alloy-transport-http = { version = "1.0.35", default-features = false }
alloy-hardforks = { version = "0.3.5", default-features = false }

# OP Alloy
op-alloy-rpc-types-engine = { version = "0.20.0", default-features = false }
