[package]
name = "optimism-preimage-maker"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true}
hashbrown = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true}

reqwest = "0.12"
clap = { version = "4.5.18", features = ["derive", "env"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = "0.7.9"
tokio = { version="1.41", features=["full"] }

# Kona
kona-client = { workspace = true }
kona-host = { workspace = true, features=["single"] }
kona-proof = { workspace = true, features = ["std"] }
kona-preimage = { workspace = true, features = ["std"] }
kona-genesis = { workspace = true, features = ["std", "serde"] }

# Alloy
alloy-primitives = { workspace = true, features = ["map", "serde"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-hardforks = { workspace = true }

# optimism derivation
optimism-derivation = { git = "https://github.com/datachainlab/optimism-elc", rev = "a4f8b97b91b21daa53defe52cea4530d36f89d52", default-features = false }

[dev-dependencies]
prost = "0.11.9"
serial_test = "3.2.0"
