[package]
name = "optimism-preimage-maker"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true}
hashbrown = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true}

reqwest = "0.12"
clap = { version = "4.5.18", features = ["derive", "env"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = "0.7.9"
tokio = { version="1.41", features=["full"] }

# Kona
kona-client = { workspace = true }
kona-host = { workspace = true, features=["single"] }
kona-proof = { workspace = true, features = ["std"] }
kona-preimage = { workspace = true, features = ["std"] }
kona-genesis = { workspace = true, features = ["std", "serde"] }
kona-registry = { workspace = true }

# Alloy
alloy-primitives = { workspace = true, features = ["map", "serde"] }

# optimism derivation
optimism-derivation = { git = "https://github.com/datachainlab/optimism-elc", rev = "0b972aac9afec9bc97aa9fa90a9bfb468df85ddd", default-features = false }
base64 = "0.22.1"

[dev-dependencies]
prost = "0.11.9"
serial_test = "3.2.0"
